# swade_character_creator

./: .gitignore  Cargo.toml  README.md
swade-core/: Cargo.toml  build.rs
swade-core/src/: constants.rs  error.rs  lib.rs  test_utils.rs
swade-core/src/db/: README.md  connection.rs  embedded.rs  mod.rs
swade-core/src/models/: README.md  ammunition_stats.rs  ancestry.rs  ancestry_choice.rs  ancestry_modifier.rs  ancestry_requirement.rs  arcane_background.rs  arcane_background_choice.rs  arcane_background_requirement.rs  armor_stats.rs  attribute.rs  character.rs  character_advance.rs  character_ancestry_choice.rs  character_arcane_background.rs  character_arcane_background_choice.rs  character_attribute.rs  character_edge.rs  character_gear.rs  character_hindrance.rs  character_modifier.rs  character_note.rs  character_power.rs  character_skill.rs  edge.rs  edge_modifier.rs  edge_requirement.rs  gear.rs  gear_category.rs  gear_modifier.rs  gear_requirement.rs  hindrance.rs  hindrance_modifier.rs  hindrance_requirement.rs  mod.rs  modifier.rs  pack_contents.rs  poison_stats.rs  power.rs  power_modifier.rs  (+7 more)
swade-core/src/repositories/: README.md  ammunition_stats_repo.rs  ancestry_choice_repo.rs  ancestry_modifier_repo.rs  ancestry_repo.rs  ancestry_requirement_repo.rs  arcane_background_choice_repo.rs  arcane_background_repo.rs  arcane_background_requirement_repo.rs  armor_stats_repo.rs  attribute_repo.rs  base_repository.rs  character_advance_repo.rs  character_ancestry_choice_repo.rs  character_attribute_repo.rs  (+33 more)
swade-core/tests/: service_integration_test.rs
(+183 files in other folders)
