[package]
name = "swade-core"
version = "0.1.0"
edition = "2024"
description = "Core library for Savage Worlds Adventure Edition character creation and management"
license = "MIT"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = "0.4"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
base64 = "0.22"

[build-dependencies]
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.14"
